--- a/index.html
+++ b/index.html
@@ -168,16 +168,16 @@
 
         <!-- فلکس باکس , z-index -->
         <article id="z-index-1">
-            <img src="png/twisted fate.png" alt="" class="tf">
-            <img src="png/ahry.png" alt="" class="ahry">
-            <img src="png/yasuo.png" alt="" class="yasuo">
-            <img src="png/dianna.png" alt="" class="dianna">
-            <img src="png/jinx.png" alt="" class="jinx">
-            <img src="png/akali.png" alt="" class="akali">
+            <!-- <img src="png/twisted fate.png" alt="" class="tf"> -->
+            <!-- <img src="png/ahry.png" alt="" class="ahry"> -->
+            <!-- <img src="png/yasuo.png" alt="" class="yasuo"> -->
+            <!-- <img src="png/dianna.png" alt="" class="dianna"> -->
+            <!-- <img src="png/jinx.png" alt="" class="jinx"> -->
+            <!-- <img src="png/akali.png" alt="" class="akali"> -->
             <img src="Png/garen-2.png" alt="" class="garen">
-            <img src="png/nasus.png" alt="" class="nasus">
-            <img src="png/ezreal.png" alt="" class="ezreal">
-            <img src="png/fizz.png" alt="" class="fizz">
+            <!-- <img src="png/nasus.png" alt="" class="nasus"> -->
+            <!-- <img src="png/ezreal.png" alt="" class="ezreal"> -->
+            <!-- <img src="png/fizz.png" alt="" class="fizz"> -->
             <img src="Png/teemo.png" alt="" class="teemo">
         </article>
 
